Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-59474

DcpConsumerBufferAckTest.DeleteWithCompressibleValue failure

    XMLWordPrintable

Details

    • Triaged
    • 0
    • Unknown
    • KV 2023-4

    Description

      To be triaged for understanding if that's only a test issue or a real production bug.

      Eg https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/36452 :

      [ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrYes_JsonYes_SnappyNo_AlwaysBufferYes
      [2023-11-06T11:49:34.684Z] unknown file: Failure
      [2023-11-06T11:49:34.684Z] C++ exception with description "MemcachedConnection::recvDcpBufferAck: Unexpected buffer bytes:0 expected:582" thrown in the test body.
      [2023-11-06T11:49:34.684Z] 
      [2023-11-06T11:49:34.684Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrYes_JsonYes_SnappyNo_AlwaysBufferYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <02-00 00-00>, 4-byte object <00-00 00-00>) (19 ms)
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paolo.cocchi Paolo Cocchi
            paolo.cocchi Paolo Cocchi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty